--- a/site_gen/humble_astro/src/layouts/Layout.astro
+++ b/site_gen/humble_astro/src/layouts/Layout.astro
@@ -45,7 +45,7 @@ const { title } = Astro.props;
 		--accent-dark: #c24e00;
 		--text: #333;
 		--text-light: #666;
-		--background: #fff;
+		--background: #ffffff;
 		--background-light: #f5f5f5;
 		--border: #ddd;
 	}
