--- a/site_gen/humble_astro/src/pages/index.astro
+++ b/site_gen/humble_astro/src/pages/index.astro
@@ -16,8 +16,8 @@ const endedBundles = sortedBundles.filter(bundle => new Date(bundle.end_date) <=
 
 <Layout title="Humble Bundle Books Collection">
 	<section class="hero">
-		<h1>Humble Bundle Books Collection</h1>
-		<p>Browse through our collection of book bundles from Humble Bundle.</p>
+		<h1>Humble Bundle Books</h1>
+		<p>Browse through othe book bundles from Humble Bundle.</p>
 	</section>
 
 	<section>
