changed how we truncate the overviews. Changed the styling of the authors

--- a/site_gen/humble_astro/src/components/BookListItem.astro
+++ b/site_gen/humble_astro/src/components/BookListItem.astro
@@ -4,6 +4,7 @@ interface Props {
   name: string;
   contentType: string;
   url: string;
+  description: string;
   ratingAverage: number;
   ratingCount: number;
   developers: string;
@@ -14,6 +15,7 @@ const {
   name, 
   contentType, 
   url, 
+  description,
   ratingAverage, 
   ratingCount, 
   developers
@@ -39,7 +41,22 @@ const generateStars = (rating: number) => {
   return stars;
 };
 
+// Truncate description
+const truncateDescription = (desc: string, maxLength = 150) => {
+  // Remove HTML tags
+  let textOnly = desc.replace(/<\/?[^>]+(>|$)/g, " | ").trim();
+  if (textOnly.at(0) == "|") {
+    textOnly = textOnly.substring(1);
+  }
+
+  if (textOnly.length <= maxLength) return textOnly;
+  
+  return textOnly.substring(0, maxLength) + '...';
+};
+
 const stars = generateStars(ratingAverage);
+const truncatedDescription = truncateDescription(description, 150);
+
 ---
 
 <div class="book-list-item">
@@ -50,8 +67,9 @@ const stars = generateStars(ratingAverage);
       </h4>
     </div>
     <div class="book-meta">
-      {developers && <span class="badge developer">{developers}</span>}
+      {developers && <span>{developers}</span>}
     </div>
+    <p class="book-description">{truncatedDescription}</p>
   </div>
   <div class="book-rating">
     <div class="rating-stars">{stars}</div>
@@ -97,6 +115,12 @@ const stars = generateStars(ratingAverage);
     flex-wrap: wrap;
     gap: 0.5rem;
     margin-top: 0.25rem;
+  }
+
+  .book-description {
+    display: flex;
+    flex-grow: 1;
+    margin-bottom: 1rem;
   }
   
   .book-rating {
