--- a/site_gen/humble_astro/src/components/BundleCard.astro
+++ b/site_gen/humble_astro/src/components/BundleCard.astro
@@ -55,7 +55,7 @@ if (isActive) {
         <p>Available: {start} - {end}</p>
       }
     </div>
-    <a href={`/bundles/${id}`} class="btn">View Bundle</a>
+    <!-- <a href={`/bundles/${id}`} class="btn">View Bundle</a> -->
   </div>
 </a>
 
