--- a/site_gen/humble_astro/src/pages/bundles/[id].astro
+++ b/site_gen/humble_astro/src/pages/bundles/[id].astro
@@ -97,6 +97,7 @@ if (isActive) {
           name={book.name}
           contentType={book.content_type}
           url={book.url || ""}
+          description={book.description}
           ratingAverage={book.rating_average || 0}
           ratingCount={book.rating_count || 0}
           developers={book.developers || ""}
