--- a/site_gen/humble_astro/src/layouts/Layout.astro
+++ b/site_gen/humble_astro/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ const { title } = Astro.props;
 		</main>
 		<footer>
 			<div class="container">
-				<p>&copy; {new Date().getFullYear()} Humble Bundle Books Collection</p>
+				<p>{new Date().getFullYear()} Made with &hearts; by <a href="https://dadand.dev">dadand.dev</a> </p>
 			</div>
 		</footer>
 
